force-app/main/default/objects/inspire1__User_Project_Settings__c/inspire1__User_Project_Settings__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - This object captures user specific UI preferences and settings.</description>
    <label>User Project Settings</label>
    <nameField>
        <label>User Project Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Project Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>