force-app/main/default/objects/inspire1__User_Project_Settings__c/fields/inspire1__Settings__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Settings__c</fullName>
    <description>Captures the user&apos;s settings for the project.</description>
    <label>Settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>