force-app/main/default/objects/inspire1__User_Project_Settings__c/fields/inspire1__UserId__c.field-meta.xml
<CustomField>
    <fullName>inspire1__UserId__c</fullName>
    <description>ID of user related who the settings belong to.</description>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>