force-app/main/default/objects/inspire1__User_Project_Settings__c/listViews/inspire1__All.listView-meta.xml
<ListView>
    <fullName>inspire1__All</fullName>
    <columns>inspire1__Project__c</columns>
    <columns>NAME</columns>
    <columns>inspire1__UserId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>